[project]
name = "ml-pipelines-df16"
version = "0.1.0"
description = "Machine Learning Pipelines Project"
authors = [
    {name = "Dmitri Babaev", email = "dmitri.babaev@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyter",
    "scikit-learn",
    "numpy",
    "pandas",
    "pyspark>3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
